fixed icons appearing a bit too high

--- a/client/styles.css
+++ b/client/styles.css
@@ -644,6 +644,8 @@ img {
 .project_icon{
   height: 3vw;
   width: 3vw;
+  margin-top: auto;
+  vertical-align: bottom;
 }
 
 .github_link{
